<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MinerCon</string>
    <string name="action_settings">Settings</string>
    <string name="add_server">Add a server</string>
    <string name="title_activity_add_server">Add a Minecraft Server</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_server_server_name_hint">Maka\'s Server</string>
    <string name="add_server_server_host_hint">play.makacraft.com</string>
    <string name="add_server_port_hint">25575</string>
    <string name="add_server_password_hint">mypasswordisgood</string>
    <string name="add_server_add_button">Let\'s go!</string>
    <string name="add_server_port_default">25575</string>
    <string name="action_delete_storage">Debug: Delete server storage</string>
    <string name="title_activity_server_manage">Manage Server</string>
    <string name="manage_server_players">Players</string>
    <string name="manage_server_properties">Game Rules</string>
    <string name="manage_server_console">Console</string>
    <string name="add_server_confirm_text">Add server</string>
    <string name="title_activity_manage_server">Manage Server</string>
    <string name="add_server_cancel">Cancel</string>
    <string name="player_list_no_players">No players online.</string>
    <string name="refresh">Refresh</string>
    <string name="kick_player">Kick</string>
    <string name="ban_player">Ban</string>
    <string name="give_item">Give Item/Block</string>
    <string name="give_op">Assign Server Operator</string>
    <string name="deop_player">Revoke Server Operator</string>
    <string name="clear_inventory">Clear Inventory</string>
    <string name="error_no_server_name">No server name specified. Enter a valid one and try again.</string>
	<string name="error_no_server_host">No server host specified. Enter a valid one and try again.</string>
	<string name="error_no_server_port">No server port specified. Enter a valid one and try again.</string>
	<string name="error_no_server_password">No server password specified. Enter a valid one and try again.</string>
	<string name="error_invalid_server_port">Invalid server port specified. Valid port must be a numerical value (usually 25575).</string>
	<string name="error_duplicate_server_name">Invalid server name. That particular one already exists.</string>
	<string name="server_added">Server added.</string>
	<string name="error_npe_reinstall">NullPointerException during server store. Clear app data in Android application settings or reinstall.</string>
	<string name="error_io_reinstall">IOException during server store. Clear app data in Android application settings or reinstall.</string>
	<string name="server_add_header">Server Connection Settings</string>
	<string name="server_list_header">Servers</string>
	<string name="no_servers_added">No servers have been added. Please add one from the menu at the top.</string>
	<string name="player_list_header">Online Players</string>
	<string name="server_add_help_header">Help: Adding Servers</string>
	<string name="server_add_help">Each server takes a <b>name</b>, <b>hostname or IP</b>, <b>rcon port</b>, and <b>rcon password.</b> The server name is just for identification on the server list. The hostname is the external IP. The RCON port and password match <b>rcon.port</b> and <b>rcon.password</b>, set in <b>server.properties</b> respectively. Finally, <b>enable-rcon</b> must be set to true, otherwise connections will be declined. If all settings given here are correct, verify that a firewall is not blocking connections to the server rcon port.</string>
	<string name="dialog_ban_reason_hint">Banned by an operator.</string>
	<string name="dialog_kick_hint">Kicked by an operator.</string>
	<string name="console_command_hint">Run a command…</string>
	<string name="server_console_ready">Ready.\nIssue a server command. Its output will be displayed here.\n</string>
    <string name="error_unable_to_authenticate">Unable to authenticate with server. Please verify that a connection is available and the server\'s connection information is correct.</string>
</resources>